[ADD] my calculet patch api
