# server/routes/users/index.js
@@ -10,6 +10,7 @@ const { updateUser } = require("./updateUser");
 const { deleteUser } = require("./deleteUser");
 const { me } = require("./getMyInfo");
 const { getMyCalculetList } = require("./getMyCalculetList");
+const { updateMyCalculet } = require("./updateMyCalculet");
 // resource
 const multer = require("multer");
 const upload = multer();
@@ -128,6 +129,42 @@ router.get("/me", auth.validate, errorHandler.dbWrapper(me.default));
  *          $ref: "#/components/responses/myCalculetList"
  */
 router.get(
+  "/me/calculet",
+  auth.validate,
+  errorHandler.dbWrapper(getMyCalculetList)
+);
+
+/**
+ * @swagger
+ *  /api/users/me/calculet:
+ *    patch:
+ *      tags: [users]
+ *      summary: 로그인 한 사용자(본인)의 마이 계산기 수정 요청 <Auth>
+ *      description: 마이 계산기 정보 수정하기 & 업데이트 로그 남기기
+ *      requestBody:
+ *        $ref: "#/components/requestBodies/updateMyCalculetInfo"
+ *      responses:
+ *        204:
+ *          $ref: "#/components/responses/success204"
+ */
+router.patch(
+  "/me/calculet",
+  auth.validate,
+  errorHandler.dbWrapper(updateMyCalculet)
+);
+
+/**
+ * @swagger
+ *  /api/users/me/calculet:
+ *    delete:
+ *      tags: [users]
+ *      summary: 로그인 한 사용자(본인)의 마이 계산기 목록 요청 <Auth>
+ *      description: 마이 계산기 목록들 (임시 계산기 포함)
+ *      responses:
+ *        200:
+ *          $ref: "#/components/responses/myCalculetList"
+ */
+router.delete(
   "/me/calculet",
   auth.validate,
   errorHandler.dbWrapper(getMyCalculetList)
